<resources>
    <string name="app_name">PointClub</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="join_a_game">Join a game</string>
    <string name="start_a_game">Start a game</string>
    <string name="settings">Settings</string>
    <string name="title_activity_boom">Boom</string>
    <string name="enter_message">Enter message</string>
    <string name="send">send</string>
    <string name="title_activity_settings">Settings</string>
    <string name="name">Name</string>
    <string name="channel_name">pointClubChannel</string>
    <string name="channel_description">versionUpdate</string>
    <string name="change_log">change log</string>
    <string name="see_log">See Log</string>
    <string name="download_new_version">Download New Version</string>
    <string name="_0">0%</string>
    <string name="current_name">Current Name:</string>
    <string name="send_a_picture">Send a picture</string>
</resources>
