<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/welcome"
        android:textSize="26sp"/>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="joinGame"
        android:text="@string/join_a_game"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"  />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createGame"
        android:text="@string/start_a_game"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/joinButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:onClick="gotoSettings"
        android:text="@string/settings"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/serverConnectivity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@android:drawable/presence_online" />

    <Button
        android:id="@+id/changeLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_log"
        android:textSize="26sp"
        android:onClick="gotoChangeLog"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/settingsButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>

